--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React webpack guy</title>
+    <title>React webpack boilerplate</title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
   </head>
   <body>
