--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,8 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>React webpack boilerplate</title>
-    <link rel="stylesheet" type="text/css" href="../../style.css">
+    <title>Brawndo</title>
   </head>
   <body>
     <div id="root"/>
